updated with docker root user :(

--- a/jenkins/Dockerfile
+++ b/jenkins/Dockerfile
@@ -1,12 +1,17 @@
 FROM jenkins/jenkins:lts
+
+ARG GROUP_ID=999
+ENV GROUP_ID=${GROUP_ID} \
+    DOCKER_VERSION=18.03.1
+
 USER root
 
 RUN mkdir -p /tmp/download && \
- curl -L https://download.docker.com/linux/static/stable/x86_64/docker-18.03.1-ce.tgz | tar -xz -C /tmp/download && \
- rm -rf /tmp/download/docker/dockerd && \
- mv /tmp/download/docker/docker* /usr/local/bin/ && \
- rm -rf /tmp/download && \
- groupadd -g 999 docker && \
- usermod -aG staff,docker jenkins
+    curl -L https://download.docker.com/linux/static/stable/x86_64/docker-${DOCKER_VERSION}-ce.tgz | tar -xz -C /tmp/download && \
+    rm -rf /tmp/download/docker/dockerd && \
+    mv /tmp/download/docker/docker* /usr/local/bin/ && \
+    rm -rf /tmp/download && \
+    groupadd -g ${GROUP_ID} docker && \
+    usermod -aG staff,docker jenkins
 
-USER jenkins
+#USER jenkins
