--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,14 +6,14 @@ services:
     restart: always
     hostname: jenkins-master
     privileged: true
-    user: jenkins
+    user: root
     build:
       context: jenkins
       dockerfile: Dockerfile
     environment:
       JENKINS_AGENT_PORT: 5001
     ports:
-      - 7070:8080
+      - 8080:8080
     volumes:
       - /var/jenkins_home:/var/jenkins_home
       - /var/run/docker.sock:/var/run/docker.sock
