--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,9 @@ services:
     ports:
       - 50000:50000
       - 8080:8080
+    environment:
+      - CASC_JENKINS_CONFIG=/var/jenkins_conf
     volumes:
+      - ./casc_configs:/var/jenkins_conf
       - /var/jenkins_home:/var/jenkins_home
       - /var/run/docker.sock:/var/run/docker.sock
