--- a/jenkins/Dockerfile
+++ b/jenkins/Dockerfile
@@ -1,21 +1,19 @@
 FROM jenkins/jenkins:lts
 
 ARG GROUP_ID=999
-ARG JENKINS_ADMIN_ID=brandon
-ARG JENKINS_ADMIN_PASSWORD=abc123
 
 ENV GROUP_ID=${GROUP_ID} \
     DOCKER_VERSION=18.03.1 \
-    JENKINS_ADMIN_ID=${JENKINS_ADMIN_ID} \
-    JENKINS_ADMIN_PASSWORD=${JENKINS_ADMIN_PASSWORD}
+    CASC_JENKINS_CONFIG=/usr/share/jenkins/ref
 
 ENV JAVA_OPTS "-Djenkins.install.runSetupWizard=false -Dhudson.footerURL=http://spruth.co \
-    -Djava.util.logging.config.file=/var/jenkins_home/log.properties ${JAVA_OPTS:-}" 
+    -Djava.util.logging.config.file=/usr/share/jenkins/ref/log.properties ${JAVA_OPTS:-}"
 
 USER root
 COPY plugins.txt /usr/share/jenkins/ref/plugins.txt
 COPY executors.groovy /usr/share/jenkins/ref/init.groovy.d/executors.groovy
-COPY log.properties /var/jenkins_home/log.properties
+COPY log.properties /usr/share/jenkins/ref/log.properties
+COPY jenkins.yaml /usr/share/jenkins/ref/jenkins.yaml
 
 # groupadd and usermod are not required, future feature of running service as jenkins user with hosted docker service
 RUN mkdir -p /tmp/download && \
